fixed the form button spacing

--- a/components/styles/Form.module.css
+++ b/components/styles/Form.module.css
@@ -45,6 +45,11 @@
   outline: none;
 }
 
+.formButton {
+  width: 12rem;
+  margin: 2rem auto 4rem;
+}
+
 @media (min-width: 640px) {
   .form .inputs {
     flex-direction: row;
@@ -54,16 +59,5 @@
   }
   .email {
     margin-left: 30px;
-  }
-}
-
-.formButton {
-  width: 250px;
-  margin: 3em 0 0 4em;
-}
-
-@media (max-width: 640px) {
-  .formButton {
-    width: 100%;
   }
 }
